--- a/app/views/static_pages/_cover.html.erb
+++ b/app/views/static_pages/_cover.html.erb
@@ -1,5 +1,11 @@
 <div class="game-cover-effect" uk-toggle="target: #i-<%= game['id'] %>">
+
   <%= image_tag('', id: "gc-#{ game['id'] }", class: 'game-cover', width: width, height: height, 'data-src' => cover_url, alt: game['name'], 'draggable' => 'false', 'uk-img' => '') %>
+
+  <div class="spinner">
+    <%= render 'svgs/loading' %>
+  </div>
+
   <% if game["xtra"] %>
   <div class="xtra-info" uk-alert>
     <button class="uk-alert-close uk-icon uk-close" type="button" uk-close></button>
