Create cover-view folder in views.

--- a/app/views/cover_view/_cover.html.erb
+++ b/app/views/cover_view/_cover.html.erb
@@ -13,4 +13,4 @@
   </div>
   <% end %>
 </div>
-<%= render partial: "game_info", locals: { game: game, cover_url: cover_url, options: options } %>
+<%= render partial: "cover_view/game_info", locals: { game: game, cover_url: cover_url, options: options } %>
