--- a/app/views/cover_view/_no_cover.html.erb
+++ b/app/views/cover_view/_no_cover.html.erb
@@ -9,4 +9,4 @@
   <% end %>
 </div>
 
-<%= render partial: "game_info", locals: { game: game, cover_url: nil, options: nil } %>
+<%= render partial: "cover_view/game_info", locals: { game: game, cover_url: nil, options: nil } %>
