Add textFit.js. Add no_image icon for no cover. Finish styling no cover.

--- a/app/views/cover_view/_cover_view.html.erb
+++ b/app/views/cover_view/_cover_view.html.erb
@@ -2,12 +2,16 @@
   <% @inquiry.results.each do |game| %>
   <div id="gs-<%= game['id'] %>" class="game-space">
     <!-- COVER -->
-    <div class="game-cover-effect" uk-toggle="target: #i-<%= game['id'] %>">
     <% if cover = get_game_cover(game) %>
+      <div class="game-cover-effect" style="width: <%= cover[:width] %>px; height: <%= cover[:height] %>px" uk-toggle="target: #i-<%= game['id'] %>">
       <%= image_tag('', id: "gc-#{ game['id'] }", class: "game-cover #{ cover[:from_scrn] }", width: cover[:width], height: cover[:height], 'data-src' => cover[:url], alt: game['name'], 'draggable' => 'false', 'uk-img' => '') %>
       <div class="spinner"><%= render 'svgs/loading' %></div>
     <% else %>
-      <%= content_tag(:div, content_tag(:p, game["name"], class: 'unselectable'), id: "gc-#{ game['id'] }", class: 'no-cover') %>
+      <div class="game-cover-effect" uk-toggle="target: #i-<%= game['id'] %>">
+      <%= content_tag(:div, id: "gc-#{ game['id'] }", class: 'no-cover') do %>
+        <%= content_tag(:div, game['name'], class: 'no-cover-game-name unselectable') %>
+        <%= render 'svgs/no_image' %>
+      <% end %>
     <% end %>
     <% if game["xtra"] %>
     <div class="xtra-info" uk-alert>
