--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -606,18 +606,24 @@ a.uk-notification-close {
 .no-cover {
     width: $no_cover_width;
     height: $no_cover_height;
-    p {
+    overflow: hidden;
+    div {
+        height: 188px;
+        width: 100%;
+    }
+    span {
         color: #6660;
         background: #4e4e4e;
-        font-size: 26px;
         font-weight: bold;
-        padding: 20px 10px 0px 10px;
+        padding: 20px 10px 10px 10px;
         text-shadow: 1px 1px 2px #d4d2d282;
         -webkit-background-clip: text;
         -moz-background-clip: text;
         background-clip: text;
     }
 }
+
+div.fitted { height: auto; }
 
 // More Platforms Toggler - - - - - - - - - - - - - - - - - - - - - - - - - - //
 .more-platforms {
@@ -1117,7 +1123,6 @@ hr.nav-bottom {
     box-shadow: -4px 5px 9px 0px #0000004a, inset 0px 0px 20px 0px #00000059;
     padding: 15px;
     font-size: 14px;
-    font-weight: lighter;
     width: 230px;
     color: rgba(255, 255, 255, 0.5);
 }
@@ -1137,7 +1142,6 @@ hr.nav-bottom {
     border: 1px solid rgba(255, 255, 255, 0.5);
     border-radius: 5px;
     font-size: 13px;
-    font-weight: lighter;
     color: rgba(255, 255, 255, 0.5);
     padding: 2px 8px;
     cursor: pointer;
