Add missing fields to games table. Pass whole game info to database when adding games.

--- a/app/views/collections/show.js.erb
+++ b/app/views/collections/show.js.erb
@@ -1,1 +1,3 @@
 $("#big-c").html("<%= escape_javascript(render partial: 'shared/my_games_table', locals: { collection: @collection }) %>");
+$(".m-coll").removeClass('active')
+$("#m-<%= @collection.id %>").addClass('active')
