--- a/app/views/cover_view/_add_form_no_platform.html.erb
+++ b/app/views/cover_view/_add_form_no_platform.html.erb
@@ -6,5 +6,21 @@
 <% scalp_platforms(game).each do |pid| %>
 <%= f.hidden_field :platforms, value: pid, multiple: true %>
 <% end %>
+<%= f.hidden_field :first_release_date, value: game['first_release_date'] %>
+<%= f.hidden_field :summary, value: game['summary'] %>
+<%= f.hidden_field :status, value: game['status'] %>
+<%= f.hidden_field :category, value: game['category'] %>
+<%= f.hidden_field :cover, value: game['cover']['image_id'] if game['cover'] %>
+<% if devs %>
+  <% devs.each do |dev| %>
+    <%= f.hidden_field :developers, value: dev, multiple: true %>
+  <% end %>
+<% end %>
+<% if screens %>
+  <% screens.each do |screen| %>
+    <%= f.hidden_field :screenshots, value: screen, multiple: true %>
+  <% end %>
+<% end %>
+
 <button class="icon-btn uk-icon-link" type="submit" uk-icon="icon: <%= icon %>" uk-tooltip="title: Add to <%= collection.custom_name || collection.name %>; pos: top-left"></button>
 <% end %>
